--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -23,4 +23,4 @@ ENV LD_LIBRARY_PATH="/usr/local/lib/python3.10/site-packages/nvidia/cublas/lib:/
 COPY whisper_live /app/whisper_live
 COPY run_server.py /app
 
-CMD ["python", "run_server.py"]
+CMD ["python", "run_server.py", "--port", "9090", "-b", "faster_whisper", "-fw", "models/faster-whisper-large-v3"]
